[package]
name = "aave"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "aave"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
alloy = { version = "0.11.1", features = ["full"] }
clap = { version = "4.5.31", features = ["derive", "env"] }
colored = "3.0.0"
reqwest = "0.12.9"
serde = "1.0.218"
serde_json = "1.0.139"
tokio = { version = "1.42.0", features = ["full"] }
